--- a/popup.html
+++ b/popup.html
@@ -22,8 +22,13 @@
             </div>
 
             <div class="mb-4">
-                <label class="block text-sm font-medium text-gray-700 mb-2">API Key</label>
+                <label class="block text-sm font-medium text-gray-700 mb-2">Gemini API Key</label>
                 <input type="password" id="apiKey" class="w-full px-3 py-2 border rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500" placeholder="Enter Gemini API Key">
+                <p class="mt-1 text-xs text-gray-500">
+                    Get your API key from 
+                    <a href="https://makersuite.google.com/app/apikey" target="_blank" class="text-blue-600 hover:text-blue-800">Google AI Studio</a>
+                </p>
+                <p class="mt-1 text-xs text-gray-500">Double-click the input to show/hide the API key</p>
             </div>
 
             <div class="mb-4">
@@ -53,7 +58,14 @@
         </div>
 
         <div class="mt-4 text-center text-xs text-gray-500">
-            <p>Click the extension icon while on Facebook to generate AI comments</p>
+            <p class="mb-2">Instructions:</p>
+            <ol class="text-left list-decimal pl-4 space-y-1">
+                <li>Get your Gemini API key from Google AI Studio</li>
+                <li>Enter the API key above and save settings</li>
+                <li>Go to any Facebook post or comment</li>
+                <li>Look for the "AI Comment" button next to comment boxes</li>
+                <li>Click the button to generate an AI-powered comment</li>
+            </ol>
         </div>
     </div>
     <script src="popup.js"></script>
